--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -4,7 +4,10 @@
         <div class="col-md-10 button-panel">
                 <button type="button" class="btn btn-primary btn-lg" ui-sref="home.about">About</button>
                 <button type="button" class="btn btn-danger btn-lg" ui-sref="home.news">News</button>
-                <button type="button" class="btn btn-warning btn-lg" ui-sref="home.reports">Reports</button>
+                <button type="button" class="btn btn-warning btn-lg" ui-sref="home.reports">
+                    <span>Reports</span>
+                    <span class="reports-button-info">{{home.report.date}}  {{home.report.total}}</span>
+                </button>
                 <button type="button" class="btn btn-success btn-lg" ui-sref="home.help">Help</button>
         </div>
         <div class="col-md-1"></div>
