--- a/app/components/reports/reports.html
+++ b/app/components/reports/reports.html
@@ -1,1 +1,7 @@
-{{reports.message}}
+
+<div class="reports-container" >
+    <div class="report-container" ng-repeat="report in reports.reports">
+        <div class="report-date">{{report.date}}</div>
+        <div class="report-text">{{report.text}}</div>
+    </div>
+</div>
